// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseText> should render Alan Turing; bold 1`] = `
<Text
  style={
    Object {
      "color": "#000",
      "fontFamily": undefined,
      "fontWeight": "700",
      "textAlign": "left",
    }
  }
>
  Alan Turing
</Text>
`;

exports[`<BaseText> should render Alan Turing; default formatting 1`] = `
<Text
  style={
    Object {
      "color": "#000",
      "fontFamily": undefined,
      "textAlign": "left",
    }
  }
>
  Alan Turing
</Text>
`;

exports[`<BaseText> should render Alan Turing; thin fontSize={18} color={#FFF} 1`] = `
<Text
  style={
    Object {
      "color": "#FFF",
      "fontFamily": undefined,
      "fontSize": 18,
      "fontWeight": "200",
      "textAlign": "left",
    }
  }
>
  Alan Turing
</Text>
`;

exports[`<BaseText> should render Alan Turing; uppercase underline strikeout semibold center 1`] = `
<Text
  style={
    Object {
      "color": "#000",
      "fontFamily": undefined,
      "fontWeight": "600",
      "textAlign": "center",
      "textDecorationLine": "line-through",
      "textTransform": "uppercase",
    }
  }
>
  Alan Turing
</Text>
`;

exports[`<H1> should render Alan Turing 1`] = `
<Text
  style={
    Object {
      "color": "#000",
      "fontFamily": undefined,
      "fontSize": 32,
      "textAlign": "left",
    }
  }
>
  Alan Turing
</Text>
`;
